// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageWidget /> should render the ImageWidget 1`] = `
<Link
  className="css-63oe3q"
  data-test-id="link"
  disabled={false}
  href="/category/3339"
>
  <img
    alt="Alt text"
    className={
      Object {
        "data-css-1rozygh": "",
      }
    }
    data-test-id="imageWidget: /category/3339"
    src="https://data.shopgate.com/shop_widget_images/22874/1a2a3d3.min.jpeg"
  />
</Link>
`;

exports[`<ImageWidget /> should render the ImageWidget without link 1`] = `
<img
  alt="Alt text"
  className={
    Object {
      "data-css-1rozygh": "",
    }
  }
  data-test-id="imageWidget: "
  src="https://data.shopgate.com/shop_widget_images/22874/1a2a3d3.min.jpeg"
/>
`;
